Bug 1372177 - ArrayBufferView error enum depends on func. r=lsalzman

MozReview-Commit-ID: 34X7yTEE3Ia

Differential Revision: https://phabricator.services.mozilla.com/D18482