dom/canvas/WebGLTexture.cpp
@@ -448,7 +448,8 @@ void WebGLTexture::RefreshSwizzle() const {
   const auto& swizzle = imageInfo.mFormat->textureSwizzleRGBA;
 
   if (swizzle != mCurSwizzle) {
-    const gl::ScopedBindTexture scopeBindTexture(mContext->gl, mGLName, mTarget.get());
+    const gl::ScopedBindTexture scopeBindTexture(mContext->gl, mGLName,
+                                                 mTarget.get());
     SetSwizzle(mContext->gl, mTarget, swizzle);
     mCurSwizzle = swizzle;
   }
